# ChangeLog for mail-filter/dspam
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.4 2004/06/30 02:18:20 st_lim Exp $

  30 Jun 2004; Lim Swee Tat <st_lim@gentoo.org> files/crontab.db4,
  files/crontab.mysql:
  Made a mistake on the cron job. Should not have timing values in
  /etc/cron.daily

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> dspam-3.0.0.ebuild:
  QA - fix use invocation

  27 Jun 2004; David Holm <dholm@gentoo.org> dspam-3.0.0.ebuild:
  Added to ~ppc.

*dspam-3.0.0 (27 Jun 2004)

  27 Jun 2004; Lim Swee Tat <st_lim@gentoo.org> +files/README.postfix,
  +files/README.qmail, +files/crontab.db4, +files/crontab.mysql,
  +files/logrotate.dspam, +files/mysql.data, +files/mysql_create_user.sql,
  +files/mysql_install_db, +files/mysql_purge_db, +files/trusted.users,
  +files/untrusted.mailer_args, +files/upgrade.sql, +dspam-3.0.0.ebuild:
  Initial commit.  Most of the ebuild was thanks to work done by Mark Renouf
  <mark@tweakt.net> on bug #26744.  I just tried harder to be anal about it. :)
  Closing bug.
