@@ -1,16 +1,17 @@
-MD5 6b93d3462cc52de0678e6bece12bfab2 dspam-3.0.0.ebuild 5749
-MD5 3f32049000ba9d5400e1efb8a6484ab8 ChangeLog 1120
+MD5 a5739d6d00e800123a343a9d51455b69 dspam-3.0.0.ebuild 6983
+MD5 42715032715e0c32a298b297ae941805 dspam-3.1.0_beta11.ebuild 7023
+MD5 7e25a78748353d7b837c344648e115f3 ChangeLog 1231
 MD5 02610fe17122bb3a27ca3dcbf7374fcc metadata.xml 311
-MD5 2cd345708a9889a04c472a9e5be7400e files/untrusted.mailer_args 24
 MD5 2a79c945ef6c7e7bd45aa1d46ae99e69 files/mysql_install_db 114
 MD5 f2f86e8f7ab440c8537f40fa18a0ee43 files/crontab.mysql 118
 MD5 05dce5dc8cf516655657aa2a4cc5f1da files/digest-dspam-3.0.0 63
 MD5 8b68501138fbe92e10bbd93a03c9f2ab files/upgrade.sql 807
 MD5 cd1bdb75fd86304f9453741a910cb8a2 files/crontab.db4 196
 MD5 84ec40b77696359ae49560588db9b948 files/mysql.data 52
-MD5 d10a51bd9e83658cb5ea1e501570261b files/trusted.users 26
+MD5 e6d1b8232199f288fe75501251ade317 files/trusted.users 19
 MD5 cefc786a1b60f3041eb3972aafb0b543 files/logrotate.dspam 154
 MD5 e0469b961385fda4305602dc2519d319 files/README.qmail 2317
 MD5 9fed58b73e35e02ecc3f9a08dcd94eaa files/mysql_purge_db 73
+MD5 8fce97b718a95e27f75b811cde060f3c files/digest-dspam-3.1.0_beta11 72
 MD5 5bcf982f468f4843ef3aa51213cc0023 files/mysql_create_user.sql 194
 MD5 c12a54112c6fec3530a7b1a368d04ac8 files/README.postfix 309
