@@ -1,4 +1,3 @@
-apache
 nobody
 root
-qmailq
+apache
