@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/dspam
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.4 2004/06/30 02:18:20 st_lim Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/dspam/ChangeLog,v 1.5 2004/07/21 07:01:47 st_lim Exp $
+
+  21 Jul 2004; Lim Swee Tat <st_lim@gentoo.org> dspam-3.0.0.ebuild:
+  Added information to use the user dspam
+  Added exim,maildrop and cyrus specific delivery agent options
 
   30 Jun 2004; Lim Swee Tat <st_lim@gentoo.org> files/crontab.db4,
   files/crontab.mysql:
